log
Fri 21 Apr 2023 06:32:23 PM UTC: 
 treemap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  1|8
total_score: 0/70
feba0d7
Fri 21 Apr 2023 06:34:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
fbcf08b
Fri 21 Apr 2023 06:34:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
be183f3
Fri 21 Apr 2023 06:47:42 PM UTC: 
 tests:  4|7
total_score: 5/70
0647b31
Fri 21 Apr 2023 06:48:05 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:5: error: expected expression before ‘}’ token
   86 |     }
      |     ^
treemap.c:79:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   79 |         int aux = tree->lower_than(key, current->pair->key);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
f64051c
